--- a/index.html
+++ b/index.html
@@ -1,28 +1,6 @@
 <!DOCTYPE html>
 <html lang="ms">
 <head>
-
-  <script>
-  (function(){
-    if (window.jsonSafe) return;
-    window.jsonSafe = async function(res){
-      try{ return await res.clone().json(); }
-      catch(e){
-        try{
-          const txt = await res.text();
-          const trimmed = txt.replace(/^\)\]\}'\n/, '').trim();
-          if (trimmed && (trimmed[0]==='{' || trimmed[0]==='[')) return JSON.parse(trimmed);
-          console.warn('jsonSafe: non-JSON response', trimmed.slice(0,120));
-          return { status:'error', message:'Non-JSON response', raw: trimmed.slice(0,500) };
-        }catch(err){
-          console.warn('jsonSafe: failed to read body', err);
-          return { status:'error', message:String(err) };
-        }
-      }
-    };
-  })();
-  </script>
-
 <!-- Injected: Robust fetch interceptor (adds id_token; coerces HTML errors to JSON to avoid SyntaxError) -->
 <script>
 (function(){
@@ -32,7 +10,7 @@
 
   function getIdToken(){
     try {
-      return (window.ID_TOKEN || sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN') || '').trim();
+      return (window.ID_TOKEN || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN') || '').trim();
     } catch(e){ return ''; }
   }
   function needsToken(url){
@@ -124,7 +102,7 @@
     try{
       var base = endpoint(); var t = token();
       var url = base + (base.indexOf('?')>=0?'&':'?') + 'action=getVoucherICSet' + (t?('&id_token='+encodeURIComponent(t)):'');
-      var r = await fetch(url); var j = await jsonSafe(r);
+      var r = await fetch(url); var j = await r.json();
       window.__voucherICS = (j && j.ics) || [];
       return j;
     } catch(err) {
@@ -292,19 +270,7 @@
 </script>
 
   <!-- Google Identity Services (Sign-In) -->
-  <script>
-  (function(){
-    try{
-      var tok = sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN');
-      if (!tok){
-        var s = document.createElement('script');
-        s.src = 'https://accounts.google.com/gsi/client';
-        s.async = true; s.defer = true;
-        document.head.appendChild(s);
-      }
-    }catch(e){}
-  })();
-  </script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 
   <!-- html2canvas untuk tangkap preview → imej (BARU) -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
@@ -572,13 +538,6 @@
   text-transform:uppercase; vertical-align: middle; line-height:1;
 }
 </style>
-
-<style>
-.sejarah-loading{display:flex;align-items:center;gap:.5rem;font-size:.9rem;color:#6b7280}
-.sejarah-spinner{width:14px;height:14px;border:2px solid #cbd5e1;border-top-color:#3b82f6;border-radius:50%;animation:spin .8s linear infinite}
-@keyframes spin{to{transform:rotate(360deg)}}
-</style>
-
 </head>
 <body>
   <!-- Global Loader -->
@@ -802,7 +761,11 @@
         <button class="btn btn-outline-secondary" type="button" id="btnRefreshSessions"><i class="fa-solid fa-rotate-right"></i> Segar</button>
         <button class="btn btn-primary" type="button" id="btnUseSession"><i class="fa-solid fa-link"></i> Guna</button>
       </div>
-      <div class="form-text">Sesi ditentukan oleh <b>Tajuk Program</b> + <b>Tarikh</b>. Guna pilihan ini untuk kongsi jadual antara laptop A & B.</div>
+      <div class="form-text">Sesi ditentukan oleh <b>Tajuk Program</b> + <b>\1
+<button id="refreshSejarahBtn" class="btn btn-sm btn-outline-secondary" style="margin-left:8px" title="Muat semula senarai program">
+  &#x21bb;
+</button>
+. Guna pilihan ini untuk kongsi jadual antara laptop A & B.</div>
     </div>
     <div class="col-md-5 text-md-end">
       <div class="small text-muted">Sesi aktif: <span id="liveSessionLabel" class="fw-semibold">-</span></div>
@@ -1529,7 +1492,7 @@ async function refreshMonitorNow(){
 }
 
 async function loadMonitor(dateStr) {
-  const container = document.getElementById('monitorCards');
+  const container = document.getElementById('monitorAllContainer');
   if (!container) return;
 
   // Tarikh dari input jika tidak diberi
@@ -1851,7 +1814,7 @@ async function handleCredentialResponse(resp){
     headers:{ 'Content-Type':'application/x-www-form-urlencoded' },
     body: new URLSearchParams({ action:'whoami', id_token: ID_TOKEN })
   });
-  const j = await jsonSafe(r);
+  const j = await r.json();
   if (j.status === 'success'){
     STAFF_EMAIL = j.email || '';
     document.getElementById('staffBadge').classList.remove('d-none');
@@ -1897,7 +1860,7 @@ async function getJSON(params={}, {silent=false, msg='Memuat data…'}={}){
       fetch(url, { method:'GET' }),
       new Promise((_,rej)=> setTimeout(()=>rej(new Error('Timeout')), 12000))
     ]);
-    return await jsonSafe(r);
+    return await r.json();
   } finally { if (!silent) hideLoader(); }
 }
 
@@ -1913,7 +1876,7 @@ async function postForm(params={}, {silent=false, msg='Menyimpan data…'}={}){
       }),
       new Promise((_,rej)=> setTimeout(()=>rej(new Error('Timeout')), 12000))
     ]);
-    return await jsonSafe(r);
+    return await r.json();
   } finally { if (!silent) hideLoader(); }
 }
 
@@ -4125,7 +4088,7 @@ async function uploadPDPA(){
         fileBase64: pure64, fileName: file.name, fileType: file.type || 'application/octet-stream'
       })
     });
-    const json = await jsonSafe(res);
+    const json = await res.json();
     if (json.status === 'success'){
       pdpaModal.hide();
       toast('Berjaya','PDPA dimuat naik','success');
@@ -4580,7 +4543,7 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
           form.set('tarikhTCA', r.voucherDate || programDate || '');
           form.set('masaTCA', masa);
           const res = await fetch(SCRIPT_URL, { method:'POST', body: form });
-          const j = await jsonSafe(res).catch(()=>({}));
+          const j = await res.json().catch(()=>({}));
           if (j && j.status === 'success') {
             if (typeof toast === 'function') toast('Berjaya', `Voucher TCA didaftarkan untuk ${r.nama || r.ic}`, 'success');
           } else {
@@ -4614,7 +4577,7 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
     try{
       const qs = new URLSearchParams({ action:'getNadiActivities', id_token: (window.ID_TOKEN||'') });
       const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`);
-      const j = await jsonSafe(res);
+      const j = await res.json();
       if (!j || j.status!=='success') throw new Error(j && (j.message||j.code) || 'Gagal ambil program');
       const data = Array.isArray(j.data) ? j.data : [];
       list.innerHTML = data.map(item=>{
@@ -4641,7 +4604,7 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
     try{
       const qs = new URLSearchParams({ action:'getNadiActivityDetail', id: activityId, id_token: (window.ID_TOKEN||'') });
       const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`);
-      const j = await jsonSafe(res);
+      const j = await res.json();
       if (!j || j.status!=='success') throw new Error(j && (j.message||j.code) || 'Gagal ambil detail');
       const rows = Array.isArray(j.data) ? j.data : [];
       if (!rows.length){ tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted">Tiada data.</td></tr>'; return; }
@@ -5221,7 +5184,7 @@ if (btn) {
     try{
       const qs = new URLSearchParams({ action:'getNadiActivities', id_token: (window.ID_TOKEN||'') });
       const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`, { credentials:'omit' });
-      const j = await jsonSafe(res);
+      const j = await res.json();
       if (!j || j.status!=='success') throw new Error((j && (j.message||j.code)) || 'Gagal ambil program');
       const data = Array.isArray(j.data) ? j.data : [];
       if (!data.length){
@@ -5261,7 +5224,7 @@ if (btn) {
     try{
       const qs = new URLSearchParams({ action:'getNadiActivityDetail', id: activityId, id_token: (window.ID_TOKEN||'') });
       const res = await fetch(`${window.SCRIPT_URL}?${qs.toString()}`, { credentials:'omit' });
-      const j = await jsonSafe(res);
+      const j = await res.json();
       if (!j || j.status!=='success') throw new Error((j && (j.message||j.code)) || 'Gagal ambil detail');
       const rows = Array.isArray(j.data) ? j.data : [];
       if (!rows.length){
@@ -5323,7 +5286,7 @@ if (btn) {
     const t = setTimeout(()=>ctl.abort(), timeoutMs);
     try{
       const res = await fetch(url, { ...opt, signal: ctl.signal, credentials:'omit' });
-      return await jsonSafe(res).catch(()=>({status:'error'}));
+      return await res.json().catch(()=>({status:'error'}));
     } finally { clearTimeout(t); }
   }
   function ensureGlobals(){
@@ -5542,7 +5505,7 @@ if (btn) {
     const ctl = new AbortController(); const t = setTimeout(()=>ctl.abort(), 20000);
     try{
       const res = await fetch(url, { signal: ctl.signal, credentials:'omit' });
-      return await jsonSafe(res);
+      return await res.json();
     } finally { clearTimeout(t); }
   }
 
@@ -5786,19 +5749,7 @@ if (btn) {
 
 
 <!-- Google Identity (wajib untuk id_token) -->
-<script>
-  (function(){
-    try{
-      var tok = sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN');
-      if (!tok){
-        var s = document.createElement('script');
-        s.src = 'https://accounts.google.com/gsi/client';
-        s.async = true; s.defer = true;
-        document.head.appendChild(s);
-      }
-    }catch(e){}
-  })();
-  </script>
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 <script>
 (() => {
   'use strict';
@@ -5833,7 +5784,7 @@ if (btn) {
     const q=new URLSearchParams({...params, id_token: ID_TOKEN});
     const res = await fetch(`${SCRIPT_URL}?${q}`, { method:'GET' });
     if(!res.ok) throw new Error(`HTTP ${res.status}`);
-    return jsonSafe(res);
+    return res.json();
   }
 
   function renderList(items){
@@ -6300,11 +6251,11 @@ function injectTelahHadirButtons(){
   async function _postForm(payload){ try{ if (typeof postForm==='function') return await postForm(payload); }catch(e){} 
     const form = new URLSearchParams(); Object.entries(payload||{}).forEach(([k,v])=>form.append(k, v));
     const res = await fetch(location.href, { method:'POST', headers:{'Content-Type':'application/x-www-form-urlencoded'}, body: form.toString() });
-    return await jsonSafe(res);
+    return await res.json();
   }
   async function _getJSON(payload){ try{ if (typeof getJSON==='function') return await getJSON(payload); }catch(e){}
     const params = new URLSearchParams(payload||{}); const res = await fetch(location.pathname + '?' + params.toString());
-    return await jsonSafe(res);
+    return await res.json();
   }
 
   // Permanent Delete for Arkib page
@@ -6512,10 +6463,10 @@ function __toVoucherPayload(payload){
     if (!window.SCRIPT_URL) return Promise.reject(new Error('SCRIPT_URL tidak ditetapkan'));
     var q = new URLSearchParams(params||{});
     try{
-      var t = (window.ID_TOKEN || sessionStorage.getItem('id_token') || sessionStorage.getItem('ID_TOKEN') || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN') || '').trim();
+      var t = (window.ID_TOKEN || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN') || '').trim();
       if (t && !q.get('id_token')) q.set('id_token', t);
     }catch(e){}
-    return fetch(window.SCRIPT_URL + '?' + q.toString(), { method:'GET' }).then(function(r){ return jsonSafe(r); });
+    return fetch(window.SCRIPT_URL + '?' + q.toString(), { method:'GET' }).then(function(r){ return r.json(); });
   }
 
   var __rows = [];
@@ -6667,66 +6618,19 @@ function __toVoucherPayload(payload){
 
 <script>
 (function(){
-  function q(sel){ return document.querySelector(sel); }
-  function byId(id){ return document.getElementById(id); }
-  function on(dom,ev,fn){ dom&&dom.addEventListener(ev,fn,{passive:true}); }
-  function isSejarah(){ return (location.hash||'').indexOf('#sejarah')===0 || !!byId('programList'); }
-
-  function mountLoader(where){
+  function reloadSejarah(){
     try{
-      if (!where || where.__loaderMounted) return;
-      var wrap = document.createElement('div');
-      wrap.className = 'sejarah-loading';
-      wrap.innerHTML = '<span class="sejarah-spinner"></span><span>Memuat data…</span>';
-      where.__loaderMounted = wrap;
-      if (where.children.length===0) where.textContent='';
-      where.appendChild(wrap);
-    }catch(e){}
-  }
-  function unmountLoader(where){
-    try{ if (where && where.__loaderMounted){ where.__loaderMounted.remove(); where.__loaderMounted=null; } }catch(e){}
-  }
-  function programListPane(){
-    return byId('programList') || q('#programListContainer') || q('[data-role="program-list"]') || q('#sejarahCard .card-body');
-  }
-  function detailPane(){
-    return byId('programDetail') || q('#programDetailContainer') || q('[data-role="program-detail"]') || q('#programTable');
-  }
-
-  async function loadOnce(){
-    const needToken = !(sessionStorage.getItem('id_token')||sessionStorage.getItem('ID_TOKEN')||localStorage.getItem('id_token')||localStorage.getItem('ID_TOKEN'));
-    if (needToken){ await new Promise(r=>setTimeout(r, 600)); }
-
-    const listEl = programListPane();
-    const detEl  = detailPane();
-    mountLoader(listEl); mountLoader(detEl);
-
-    try{
-      if (typeof window.loadPrograms === 'function'){ await Promise.resolve(window.loadPrograms()); }
-      if (typeof window.renderProgramList === 'function'){ window.renderProgramList(); }
-
-      // pilih item pertama jika tiada yang aktif
-      const list = byId('programList');
-      if (list){
-        const active = list.querySelector('.list-group-item.active');
-        const first  = list.querySelector('.list-group-item');
-        if (!active && first){ if (typeof first.click === 'function') first.click(); }
+      if (typeof window.loadPrograms === 'function'){
+        window.loadPrograms();
+      } else {
+        location.reload();
       }
-    } finally {
-      unmountLoader(programListPane());
-      unmountLoader(detailPane());
-    }
+    }catch(e){ location.reload(); }
   }
-
-  function bootstrap(){
-    if (!isSejarah()) return;
-    if (window.__sejarahBooted) return;
-    window.__sejarahBooted = true;
-    loadOnce().catch(function(e){ console.warn('Sejarah load error', e); });
-  }
-
-  on(document,'DOMContentLoaded', bootstrap);
-  on(window,'hashchange', function(){ if (isSejarah()){ window.__sejarahBooted=false; bootstrap(); } });
+  document.addEventListener('DOMContentLoaded', function(){
+    var btn = document.getElementById('refreshSejarahBtn');
+    if (btn){ btn.addEventListener('click', reloadSejarah); }
+  });
 })();
 </script>
 
